--- a/masters/HPC/Teoria/4.Synchronization.md
+++ b/masters/HPC/Teoria/4.Synchronization.md
@@ -41,13 +41,13 @@ Una _**Race Condition**_ avviene quando:
 Per comprendere un programma concorrente bisogna conoscere le operazioni indivisibili (atomiche) sottostanti
 
 - **Atomic Operation:** Un operazione che esegue fino al completamento o non esegue proprio
-    - È indivisibile: non può essere arrestata e non può essere modificata da nessuno mentre esegue
+    - È indivisibile: non può essere arrestata e non può essere modificata da nessuno mentre esegue (le normali istruzioni `load` e `store` sono atomiche, ma ad esempio `i++` non lo è: è una load + write + store).  
     - È il _BuildingBlock_ in quanto se non esistessero operazioni atomiche non si avrebbero modi per fare lavorare insieme i thread.  
 
 ### Definizioni: 
 
-1. _**Sincronizzazione:**_ Usa operazioni atomiche per assicurare la cooperazione tra Thread 
-2. _**Mutual Exclusion:**_ Assicura che un unico Thread faccia una task in un particolare istante: un Thread esclude gli altri mentre fa la propria task
+1. _**Sincronizzazione:**_ Uso di operazioni atomiche per assicurare la cooperazione tra Thread 
+2. _**Mutual Exclusion:**_ Assicurare che un unico Thread faccia una task in un particolare istante: un Thread esclude gli altri mentre fa la propria task (MutEx)
 3. _**Critical Section:**_ Pezzo di codice che **solo** un unico Thread può eseguire in un momento
     - Critical Section definisce la granularità di condivisione tra Thread
 4. _**Lock:**_ Impedisce a qualcuno di fare qualcosa
@@ -55,27 +55,78 @@ Per comprendere un programma concorrente bisogna conoscere le operazioni indivis
     - Si fa unlock quando si esce una volta acceduto il dato shared
     - Si aspetta se si trova un lock 
 
+**Concetto di Lock**:  
+Vogliamo creare una struttura software lock con due metodi:
+1. `Acquire()` voglio entrare in una zona del programma, se è libera allora entro e chiudo; se è occupato allora aspetto
+2. `Release()` una volta finita la computazione rilascio il lock che fa tornare la zona ad essere libera e sveglio chi sta aspettando.  
 
-### Implementazione di un `lock` con `test&set`:
 
-Il `lock` deve essere atomico, quindi indivisibile, per andare in contro a questa evenienza si fanno istruzioni hardware dedicate.
+ES (tentativo con solo software):
 
 ```c++
-test&set(&address){ 
-    // address mi rappresenta l'indirizzo che ha il valore del lock 
-    result = M[address];
-    M[address] = 1;
-    return result;
+if(noMilk){
+    if (!Note){
+        // un thread potrebbe inserirsi tra !Note e leave(Note)
+        // queste sono due operazioni separate, NON un è un op atomica
+        leave(Note);
+        buy(milk);
+        remove(Note);
+    }
 }
 ```
 
-Soluzione semplice:
+
+L'esempio sopra ci mostra che implementare la struttura di Lock con solo il software è **impossibile** a causa dell'interleaving e della mancanza di vere operazioni atomiche.  
+Il Contenxt Switch del sistema operativo potrebbe mettere in pausa un thread all'istruzione che precede la modifica del flag (`leave(Note)`). In questo caso un secondo thread potrebbe venire attivato e se arriva fino alla condizione del flag (`if(!Note)`)la vedrà come False, in quanto l'altro thread non ha fatto in tempo a modificarla $\rightarrow$ il thread2 entra nella zona critica e avremo due thread al suo interno, rischiamo di cambiare la semantica del programma in questo modo.  
+Questo succede perchè l'istruzione di controllo e attivazione del lock è composta da due istruzioni separate, un thread potrebbe infilarsi in mezzo!  
+Bisogna che il **controllo e acquisizione del lock sia atomico**!  
+
+
+Per questo motivo serve l'aiuto del hardware, abbiamo bisogno di istruzioni speciali chiamate **Atomic Read-Modify-Write**
+
+### Implementazione di un `lock`:
+
+Il `lock` deve essere atomico, quindi indivisibile, per andare in contro a questa evenienza si fanno istruzioni hardware dedicate:
+
+1. **`test&set`**: maggior parte delle architetture (RISC)  
+    ```c++
+    // address mi rappresenta l'indirizzo che ha il valore del lock
+    test&set(&address){  
+        result = M[address];
+        M[address] = 1;
+        return result;
+    }
+    ```
+
+2. **`swap`**: architetture x86 (CISC)
+    ```c++
+    swap(&address, register){
+        temp = M[address];
+        M[address] = register;
+        register = temp;
+    }
+    ```
+
+
+3. **`compare&swap`**: architetture 68000
+    ```c++
+    compare&swap(&address, reg1, reg2){
+        if(reg1==M[address]){
+            M[address] = reg2;
+            return success;
+        }else{
+            return failure;
+        }
+    }
+    ```
+
+Esempio semplice d'uso:
 
 ```c++
-int value = 0;
+int value = 0; // variabile flag 
 // Acquire -> lock 
 Acquire() {
-    while (test&set(value)); //while busy 
+    while (test&set(&value)); //while busy 
 }
 // Release -> unlock 
 Relese() {
@@ -111,9 +162,10 @@ unlock();
 
 ### Criteri di performance per operazioni di sincronizzazione
 
-1. **Latenza:** Tempo minimo per acquisire il lock se non c'è contenzione (quanto ci impiega un thread a fare il lock).  È rilevante in casi di contenzione bassa (pochi thread che competono)
+1. **Latenza:** Tempo minimo per acquisire il lock se non c'è contenzione (quanto ci impiega un thread a fare il lock).  È rilevante in casi di contenzione bassa (pochi thread che competono)  
+nota: le istruzioni atomiche t&s o CAS sono lente, impiegano decine di cicli.  
 
-2. **Bandwidth:** Operazioni di sincronizzazione al secondo sotto alta contenzione tra i thread
+2. **Bandwidth:** Velocità di scambio sotto stress, ossia operazioni di sincronizzazione al secondo sotto alta contenzione tra i thread (se ci sono tanti thread, quanti riescono a passare al secondo)  
 
 3. **Traffico:** Numero di eventi generati come invalidazione della cache, accessi alla memoria e scambi di messaggi. Più thread competono per il lock e più eventi verranno generati saturando il sistema di comunicazione.  Rilevante in particolar modo in sistemi con risorse condivise limitate.  
 
@@ -121,11 +173,12 @@ unlock();
 
 5. **Fairness:** Capacità del sistema di garantire che tutti i thread abbiano una possibilità _equa_ di accedere alla risorsa condivisa.  Rilevante in applicazioni che richiedono un comportamento _prevedibile_ come sistemi in tempo reale.  
 
-currently @ 1:07 
 
+## Coherence Traffic:  
 
+Esiste un colpevole per il detoriamento delle performance quando si usano più thread, ossia il **coherence traffic**.  
 
-
+Guardiamo in assembly la `test&set`:  
 
 ```asm
 // atomically load mem[addr] into R0 and set mem[addr] to 1
@@ -137,21 +190,22 @@ lock:
 
 unlock:
     st mem[addr], #0 // store 0 to address 
-
 ```
 
-Questa implementazione di `test&set` genera tanto traffico, perchè sto mettendo nel mio programma una sequenza potenzialmente lunghissima di test e jump, problematico perchè se guardiamo il traffico delle transazioni (*traffico di coerenza della cache*) ci rendiamo conto che invalidiamo le linee di cache per i processori che provano ad acquisire il lock.  
-Il problema è quindi che in maniera continuativa sto andando a disturbare il protocollo di cache
+Possiamo notare che la `test&set` **scrive sempre**! Questo uccide le performance, specialmente quando abbiamo spinlock !  
 
+Mettiamo caso che P1 avesse chiuso il lock, P2 prova a entrare nella sezione critica, incontra il lock e chiama la `test&set`, nonostsante il lock sia chiuso (val==1), l'istruzione di P2 ci riscrive sopra un 1 $\rightarrow$ per i protocolli di cache coherence MESI/MSI, scrivere 1 sopra è comunque una write, e le write invalidano le altre cache $\rightarrow$ per invalidare le altre cache dobbiamo scambiare messaggi lungo il bus, se ho tanti thread saturo il canale di comunicazione.  
+
+Il grafico a pagina 45 mostra come perdiamo performance usando la `test&set` all'aumentare di processori, fino a quando sono 3 il tempo del benchmark sale linearmente, se andiamo su 4+ processori esplode esponenzialmente.  
 
 ![test and set cache coherence traffic](../../images/testandset_cache_traffic.png)
 
 
 Bisogna trovare un modo per rendere più 'snella' questa operazione
 
-### Test&Test&Set Lock :
+### `Test&Test&Set` Lock : prima ottimizzazione
 
-Prima faccio un test, e solo quando il primo test mi dice che ho le condizioni per fare la test&set la eseguo (in quanto è relativamente costosa).  
+Prima faccio un test, e solo quando il primo test mi dice che ho le condizioni per fare la test&set la eseguo (evito di invalidare altre cache e di generare troppo traffico sul bus).    
 
 
 ```c++
@@ -168,20 +222,91 @@ void Unlock(volatile int* lock){
 }
 ```
 
-Viene implementato con un `while(*lock != 0)`, che è una normale lettura. Lo controllo con una primitiva che non costa tanto (leggo la variabile `*lock` in maniera tradizionale, che ho in cache).   
+Viene implementato con un `while(*lock != 0)`, che è una normale lettura, non invalido la cache degli altri.
+
 Continuo quindi a leggere il valore del lock in cache, tale valore cambierà solamente quando qualcuno farà release, in quanto:
 - Quando un thread fa release, il protocollo di cache coherence mi avviserà che il dato di `*lock` in cache è invalido, e a quel punto avrò il segnale che è cambiato il valore di quella variabile, e potrò fare la mia `test&set`, se riesco ad ottenre il lock, atomicamente lo blocco, se non riesco riparto dal controllare il valore di `*lock` in cache che costa poco.  
 
-La problematica di Fairness è ancora presente, ma garantisco di non impestare il sistema di bus con tante transazioni come illustrato dall'immagine sottostante.  
-
-
 ![test&test&set](../../images/testandtestandset.png)
 
+Caratteristiche della T&T&S:  
+- Letenza: Peggiore, faccio due controlli invece di uno solo
+- Traffico: Migliore (aspetto in silenzio senza intasare il bus)
+- Fairness: Pessima, è una rissa disordinata appena il lock si libera.  
+
+
+_nota:_ Mettiamo caso che ci siano 15 thread in un sistema, uno ha il lock e gli altri 14 fanno la T&T&S, mentre th1 ha il lock gli altri fanno letture sulle loro cache senza generare traffico di coerenza.  
+Quando th1 libera il lock:
+- invalida le cache di tutti gli altri lock 
+- tutti gli altri th si buttano ad acquisire il lock e generano un ingorgo momentaneo sul bus
+
+**T&T&S con backoff:**  
+Per evitare l'ingorgo momentaneo introduciamo l' Exponential Backoff  
+- se un th prova a prendere il lock e fallisce, non riprova subito ma dorme per un po'.  
+
+Pro: Spalma il traffico nel tempo, evita che tutti i core colpiscano il bus nello stesso momento
+Contro: Molto unfair, i nuovi arrivati hanno un enorme vantaggio rispetto ai processori che sono in attesa da più tempo!  
+
+### Ticket Lock: Soluzione alla fairness
+
+```c++
+struct lock{
+    volatile int next_ticket;
+    volatile int now_serving;
+}
+
+void lock(lock *l){
+    int my_ticket = atomicIncrement(l->next_ticket);
+    while(my_ticket != l->now_serving); // wait 
+}
+
+void unlock(lock *l){
+    l->now_serving++;
+}
+```
+
+Questo lock implementa una fairness perfetta ma il problema del traffico rimane $\rightarrow$ tutti i processori in attesa fanno spin sulla stessa variabile now_serving, infatti quando viene incrementato now_serving vengono invalidate le cache di tutti i processori, tutti leggeranno e metteranno in cache il nuovo valore ma solo uno entrerà (generiamo traffico $O(P)$)
+
+
+### Array-based Lock 
+Questo lock vuole evitare l'ingorgo momentaneo sul bus quando il lock si libera.  
+l'idea alla base è che ogni thread aspetti su una variabile diversa.  
+
+Invece di un unico valore now_serving abbiamo un array status[] grande quanto il numero di processori.  
+
+```c++
+struct lock{
+    volatile int status[P];
+    volatile int head;
+}
+
+int my_element;
+
+void lock(lock *l){
+    my_element = atomicIncrement(l->head);
+    while(l->status[my_element] == 1);
+}
+
+void unlock(lock *l){
+    l->status[next(my_element)] = 0; 
+}
+```
+
+Performance: 
+- Traffico: $O(1)$, quando libero il lock invalido la cache di un solo processore (il successivo), gli altri non si accorgono di niente
+- Difetto: Storage, serve un array di dimensione P, se abbiamo tanti lock e tanti processori rischiamo di sprecare molta RAM.  
+- Fairness: perfetta ! i thread arrivano e si posizionano nell'array in ordine di arrivo (indice dell'array indica l'ordine di arrivo _NON_ l'id del thread).  
+
+
+Attenzione al Convoy Effect $\rightarrow$ tallone d'achille dei lock FIFO.  
+
+Immaginiamo 3 processi in fila nell'array lock 
+`status = [0, 1, 1]` (p1 ha il lock, p2 e p3 aspettano).  
+Proprio mentre p1 sta per finire, il OS decide di interrompere il time slice di p2 e lo addormenta.  
+p1 fa unlock e invalida la cache di p2, ma p2 sta dormendo e non è in ascolto, non si accorge di niente, non può ottenere il lock.  
+p3 sta aspettando che p2 gli dia il via libera, cosa che non accadrà nel breve termine, se avessimo altri processi in coda sarebbero tutti bloccati da p2 che dorme.  
 
 
 
-# Consistency:
 
-La consistenza è una problematica che va uno step oltre la coerenza (di cache), in quanto non si tratta soltanto che i valori vengano correttamente propagati ma si tratta di definire una tempistica con cui la propagazione avviene.  
-I memory consistency models definiscono dei worst case al tempo con cui riteniamo lecito che il ritardo di propagazione avvenga.   
 
