fixed typos in notes

--- a/masters/HPC/Teoria/0.Ripasso.md
+++ b/masters/HPC/Teoria/0.Ripasso.md
@@ -45,8 +45,10 @@ La dicitura "architettura a 64 bit" (es. RV64) definisce la larghezza dei regist
     *   Poiché le istruzioni sono lunghe 4 Byte, il PC viene incrementato di 4 unità alla volta (`PC = PC + 4`) per passare all'istruzione successiva, indipendentemente dal fatto che la macchina sia a 32 o 64 bit.
 
 
-
-
+* **CISC**:
+    * L'architettura CISC differisce dal numero di byte dedicati alle istruzioni, **non** è fisso bensì **variabile**!  
+    Un'istruzione potrebbe essere lunga 1B (es:return) o 15B (una mov complessa).  
+    * CISC è l'architettura utilizzata da x86/Intel/AMD  
 
 ---
 
