typos fixed in notes

--- a/masters/HPC/Teoria/1.SingleCoreToMultiCore.md
+++ b/masters/HPC/Teoria/1.SingleCoreToMultiCore.md
@@ -1,7 +1,7 @@
 # Lezione 2: Multicore Revolution
 
 
-HPC è diventato un tema di estrema importanza negli ultimi anni, presneti in varie settori: 
+HPC è diventato un tema di estrema importanza negli ultimi anni, presente in vari settori: 
 - da supercomputing (es: supercomputer Leonardo del cineca che vuole massimizzare le performance ma tenendo il più basso possibile il consumo di energia!!)
 - embedded systems: (es: chip denntro un'auto di guida autonoma, ha limiti di batteria ma deve saper fare dei calcoli importanti per l'AI)
 
