--- a/masters/HPC/Teoria/2.ParallelSystems.md
+++ b/masters/HPC/Teoria/2.ParallelSystems.md
@@ -22,7 +22,7 @@ Abbiamo quindi bisogno di un **nuovo paradigma** di scrittura dei nostri program
 **Attenzione:** il parallelismo introduce dell'overhead, costi aggiuntivi che non si avevano nel programma originale. risulta necessario considerare bene questi overhead quando si progetta software parallelo in quanto in alcuni casi può essere maggiore il costo di overhead del beneficio che si ottiene dalla parallelizzazione  
 
 
-tassonomia: disciplina che si occupa della classificazio e gerarchica di elementi relativi a un determinato settore 
+tassonomia: disciplina che si occupa della classificazione gerarchica di elementi relativi a un determinato settore 
 
 ## Tassonomia delle architetture parallele (principali paradigmi dei modelli paralleli)
 
@@ -51,13 +51,15 @@ Esistono diversi modelli di architettura parallela:
 
 3. **SIMD** (Single Instruction Multiple Data stream)  
     L'unità di Fetch/Decode è unica. L'accesso alla memoria avviene tramite un Bus Dati allargato (Wide Bus) che preleva più dati in un colpo solo (Vector Load). Una volta che i dati sono arrivati nei Registri Vettoriali, ogni Processing Unit (ALU) ha un accesso dedicato alla sua porzione di registro.    
-    Mi permette di eseguire la stessa operazione su dati differenti, consiste nel più classico tipo di data parallelism (architettura alla base delle GPGPU). 
+    Mi permette di eseguire la stessa operazione su dati differenti, consiste nel più classico tipo di data parallelism (architettura delle GPU). 
     **aka:** un solo instruction pool (un solo 'cervello') ma tante processing unit e tanti dati diversi che entrano in parallelo; tutte le processing unit ricevono lo stesso comando!(dato che siamo in SingleIstruction).  
 
 4. **MIMD** (Multiple Instructions Multiple Data streams)  
     Si sfrutta il parallelismo sia nell'asse _istruzioni_ che nell'asse _data_.  
     Ho tante processing unit ciascuna alimentate da un instruction stream dedicato.  
     Modello delle CPU Multicore moderne.   
+
+Nel panorama moderno le CPU sono MIMD a più core, ma ogni core è capace comuque di fare istruzioni SIMD per allegerire i calcoli quando serve.  
 
 
 **Modelli di programmazione parallela:**  
@@ -258,7 +260,7 @@ int main(int argc, char *argv[]){
         rc = pthread_create(&thread_ids[t],
                             NULL       /* attributes       */,
                             add_arrays /* function         */,
-                            t * 4      /*args to function  */)
+                            t * 3      /*args to function  */)
     }
     pthread_exit(NULL)
 }
