--- a/masters/HPC/Teoria/3.Coherence.md
+++ b/masters/HPC/Teoria/3.Coherence.md
@@ -202,7 +202,9 @@ Studi su software (worlkload) dimostrano che esistono pattern di accesso ricorre
 
 Scala male per $P$, quindi per architetture supercomputer:  
 Assumiamo 64B per linea di cache, se dovessimo avere 1024 nodi nel sistema allora ogni riga della directory dovrebbe avere 1024 bit, uno per ogni processore (bit vector)  
-- stiamo usando più memoria (128B) per sapere chi ha il dato rispetto alla memoria che usiamo per i dati veri (64B), è uno spreco del 200%.  
+- stiamo usando più memoria (128B) per sapere chi ha il dato rispetto alla memoria che usiamo per i dati veri (64B), è uno spreco del 200%.    
+(perchè ci serve un full bit vector, quindi 1024 bit, che sono 128B per ogni riga di cache)  
+
 
 Esistono due ottimizzazioni al modello di directory classica: Limited Pointer Schemes (riducono $P$) e Sparse Directories (ridocono la $M$).  
 
