--- a/masters/HPC/Teoria/5.Consistency.md
+++ b/masters/HPC/Teoria/5.Consistency.md
@@ -168,7 +168,7 @@ Note:
 
 - le istruzioni che stanno dentro la sezione critica (oltre l'acquire) non possono 'scappare' e venire eseguite prima di aver acquisito il lock
 - **ottimizzazione:** tuttavia le operazioni che precedevano l'acquire possono cadere dentro la sezione critica, ossia possono essere riordinate. Se prima di acquisire il lock stavamo calcolando `i++`, allora la CPU potrebbe finire di calcolare i++ una volta acquisito il lock!  
-- `acquire(lock)` è una barriera che blocca la discesa alle operazioni che sono oltre l'acquire, ma permette la discesa delle operazioni che precedono!  
+- `acquire(lock)` è una barriera che blocca la salita delle operazioni nella sezione critica (oltre l'acquire), ma permette la discesa delle operazioni che precedono!  
 
 <br>
 
