--- a/masters/HPC/Teoria/6.Performance.md
+++ b/masters/HPC/Teoria/6.Performance.md
@@ -64,7 +64,7 @@ Costi principali:
 
 
 Bisogna tenere a mente i **tradeoff:**  
-- abbiamo bisogno di unità di lavoro da dare ai thread grandi (coarse granularity) per ammortizzare i costi fissi 
+- abbiamo bisogno di scegliere unità di lavoro grandi da dare ai thread (coarse granularity) per ammortizzare i costi fissi 
 - bisogna stare attenti! se le unità di lavoro sono troppo grandi rischiamo di non sfruttare al massimo il parallelismo (pochi processori lavorano, altri aspettano)  
 
 <br>
@@ -319,5 +319,3 @@ Particolarmente rilevante in cicli/loop e spesso effettuate dal compilatore.
     ![memory banking](../../images/memory_banking.png)  
 
     Dovremmo fare in modo che il primo banco abbia: 0,1,2,3 ; il secondo 4,5,6,7 ecc... 
-
-
